--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   <img :src="currentImage(index)" alt="" class="object-contain h-full w-32 sm:w-48 border"/>
                 </div>
                 <div class="flex flex-col justify-center pr-8 sm:pl-6 lg:pl-10">
-                  <div class="font-medium text-sm mb-2 text-wrap truncate group-hover:text-xs group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
+                  <div class="font-medium inline-block text-sm mb-2 text-wrap truncate group-hover:text-xs group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
                     Product: {{ p.title }}
                   </div>
                   <div class="font-light uppercase text-xs mb-2 truncate group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
@@ -149,7 +149,7 @@
             currentImageIndex: {}, 
             rotationInterval: null,
             isLoading:true,
-            No_Of_Cards:4,
+            No_Of_Cards:null,
             List:false,
             skip:0,
             temp:[],
