--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
           setInitialCards() {
             const width = window.innerWidth;
             if (width >= 1280) {
-              this.No_Of_Cards = "4";
-            } else if (width >= 640) {
-              this.No_Of_Cards = "2";
+              this.No_Of_Cards = 4;
+            } else if (width >= 620) {
+              this.No_Of_Cards = 2;
             } else {
-              this.No_Of_Cards = "1";
+              this.No_Of_Cards = 1;
             }
           },        
         }
