--- a/index.html
+++ b/index.html
@@ -14,20 +14,12 @@
         <div class=" px-6 py-4 relative inline-block text-left">
           <div class="grid-col-1">
             <label for="No_Of_Cards" class="block text-gray-700 text-sm font-bold mb-2">No of cards</label>
-            <select v-model="No_Of_Cards"id="No_Of_Cards" class="w-20 sm:w-32 xl:w-40  h-10 bg-blue-400 text-white
-            rounded-lg shadow 
-            hover:bg-blue-500 focus:outline-none" @click="List = false">
-                <option value="1" :class="`block sm:hidden`">1</option>
-                <option value="2" :class="`block sm:hidden`">2</option>
-                <option value="4" :class="`hidden sm:block`">4</option>
-                <option value="5" :class="`hidden sm:block`">5</option>
-                <option value="6" :class="`hidden sm:block`">6</option>
-                <option value="7" :class="`hidden sm:block`">7</option>
-                <option value="8" :class="`hidden sm:block`">8</option>
-                <option value="9" :class="`hidden sm:block`">9</option>
-                <option value="10" :class="`hidden sm:block`">10</option>
+            <select v-model="No_Of_Cards" id="No_Of_Cards" class="w-20 sm:w-32 xl:w-40 h-10 bg-blue-400 text-white rounded-lg shadow hover:bg-blue-500 focus:outline-none" @click="List = false">
+              <option v-for="card in filteredCards" :key="card.value" :value="card.value">
+                {{ card.label }}
+              </option>
             </select>
-        </div>
+          </div>
         </div>
         <div class="px-4 pt-11 pb-4">
           <button type="button" @click="List = !List" class="w-20 sm:w-32 xl:w-40 h-10 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
@@ -156,6 +148,17 @@
             selected:[],
             selectable:false,
             ToPosition:0,
+            cards: [
+              { value: 1, label: "1", showOnMobile: true },
+              { value: 2, label: "2", showOnMobile: true },
+              { value: 4, label: "4", showOnMobile: false },
+              { value: 5, label: "5", showOnMobile: false },
+              { value: 6, label: "6", showOnMobile: false },
+              { value: 7, label: "7", showOnMobile: false },
+              { value: 8, label: "8", showOnMobile: false },
+              { value: 9, label: "9", showOnMobile: false },
+              { value: 10, label: "10", showOnMobile: false }
+            ]
           };
         },
         beforeMount(){
@@ -167,6 +170,13 @@
           this.setInitialCards();
           window.addEventListener("resize", this.setInitialCards);
         },
+        computed: {
+          filteredCards() {
+            const isMobile = window.innerWidth <=768; 
+            return this.cards.filter(card => isMobile ? card.showOnMobile :!card.showOnMobile );
+          }
+        },
+
         methods:{
           async getData() {
             this.isLoading = true;  
@@ -276,12 +286,12 @@
             const width = window.innerWidth;
             if (width >= 1280) {
               this.No_Of_Cards = 4;
-            } else if (width >= 620) {
+            } else if (width >= 640) {
               this.No_Of_Cards = 2;
             } else {
               this.No_Of_Cards = 1;
             }
-          },        
+          },                  
         }
       })
       App.mount("#app");
