--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div v-if="List" class="container bg-gray-100 max-w-[1320px] mx-auto" ref="CardsContainer">
           <div class="fixed bottom-4 right-4 z-30">
             <button type="button" @click="ScrollToFirstElement"
-              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-2 border-black">
+              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
                 <path
                   d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
@@ -120,7 +120,7 @@
           ref="CardsContainer">
           <div class="fixed bottom-4 right-4 z-30">
             <button type="button" @click="ScrollToFirstElement"
-              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-2 border-black">
+              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
                 <path
                   d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
@@ -355,4 +355,4 @@
   </script>
 </body>
 
-</html>
+</html>  
