--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </select>
           </div>
         </div>
-        <div class="px-4 pt-11 pb-4">
+        <div v-if="!List" class="px-4 pt-11 pb-4">
           <button type="button" @click="List = !List"
             class="w-20 sm:w-32 xl:w-40 h-10 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
             List
