--- a/index.html
+++ b/index.html
@@ -37,12 +37,7 @@
             List
           </button>
         </div>
-        <div class="px-4 pt-11 pb-4">
-          <button type="button" @click="ScrollToLastElement"
-            class="w-20 sm:w-32 xl:w-40 h-10 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
-            Bottom
-          </button>
-        </div>
+        
       </div>
     </header>
     <div v-if="isLoading" class="fixed inset-0 flex justify-center items-center bg-gray-50 bg-opacity-50">
@@ -67,6 +62,12 @@
                 <path
                   d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
               </svg>
+            </button>
+          </div>
+          <div class="fixed top-30 right-2 z-30">
+            <button type="button" @click="ScrollToLastElement"
+              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M26.29 20.29 18 28.59V0h-2v28.59l-8.29-8.3-1.42 1.42 10 10a1 1 0 0 0 1.41 0l10-10z" data-name="2-Arrow Down"/></svg>
             </button>
           </div>
           <div v-for="(p, index) in products.products" :key="p.id"
@@ -119,6 +120,12 @@
               class="w-20 h-6 py-3 ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
               Change
             </button>
+            <button type="button"
+              @click="this.selected = []"
+              class="w-28 h-6 py-3 ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+              Unselect All
+            </button>
+            <div class="ml-4">Total Number Of Items: {{this.Total}}</div>
           </div>
         </div>
         <div v-else=""
@@ -131,6 +138,12 @@
                 <path
                   d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
               </svg>
+            </button>
+          </div>
+          <div class="fixed top-30 right-2 z-30">
+            <button type="button" @click="ScrollToLastElement"
+              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><path d="M26.29 20.29 18 28.59V0h-2v28.59l-8.29-8.3-1.42 1.42 10 10a1 1 0 0 0 1.41 0l10-10z" data-name="2-Arrow Down"/></svg>
             </button>
           </div>
           <div v-for="(p, index) in products.products" :key="index" class="px-2 py-4">
