--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <input type="number" v-model="ToPosition"
               class="bg-gray-200 ml-2 border-2 border-black w-10 text-center" /><button type="button"
               @click="ChangePosition"
-              class="w-20 h-6 py-3 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+              class="w-20 h-6 py-3 ml-1 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
               Change
             </button>
             <button type="button"
@@ -182,7 +182,7 @@
             <input type="number" v-model="ToPosition"
               class="bg-gray-200 ml-2 border-2 border-black w-10 text-center" /><button type="button"
               @click="ChangePosition"
-              class="w-20 h-6 py-3 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+              class="w-20 h-6 py-3 ml-1 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
               Change
             </button>
             <button type="button"
