--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <span class="sr-only">Loading...</span>
     </div>
     <div v-else>
-      <div class="container bg-gray-100 w-full mx-auto">
+      <div class="bg-gray-100 w-full">
         <div v-if="List" ref="CardsContainer">
           <div class="fixed bottom-4 right-4 z-50">
             <button type="button" @click="ScrollToFirstElement"
