--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app" class="scroll-smooth">
     <header class="bg-gray-300">
-      <div class="container justify-content-between justify-center flex flex-wrap max-w-[1320px] mx-auto">
+      <div class="container justify-center flex flex-wrap max-w-[1320px] mx-auto">
         <div class="px-6 py-4 relative inline-block text-left">
           <div class="grid-col-1">
             <label for="No_Of_Cards" class="block text-gray-700 text-sm font-bold mb-2">No of cards</label>
