--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             alt="Logo" class="h-20 w-20 sm:w-24 object-contain" />
         </div>
         <div class="flex items-center space-x-4">
-          <div class="px-6 py-4 relative inline-block text-left">
+          <div class="px-6 pt-7 relative inline-block text-left">
             <div class="grid-col-1">
-              <label for="No_Of_Cards" class="block text-gray-700 text-sm font-bold mb-2">No of cards</label>
               <select v-model="No_Of_Cards" id="No_Of_Cards"
                 class="w-20 sm:w-32 xl:w-40 h-10 bg-blue-400 text-white rounded-lg shadow hover:bg-blue-500 focus:outline-none"
                 @click="List = false">
