--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="px-6 pt-7 relative inline-block text-left">
             <div class="grid-col-1">
               <select v-model="No_Of_Cards" id="No_Of_Cards"
-                class="w-20 sm:w-32 xl:w-40 h-10 bg-blue-400 text-white rounded-lg shadow hover:bg-blue-500 focus:outline-none"
+                class="w-20 sm:w-32 xl:w-40 h-10 pl-4 bg-blue-400 text-white rounded-lg shadow hover:bg-blue-500 focus:outline-none"
                 @click="List = false">
                 <option value="1" class="block sm:hidden">1</option>
                 <option value="2" class="block sm:hidden">2</option>
@@ -36,16 +36,16 @@
               </select>
             </div>
           </div>
-          <div v-if="!List" class="px-4 pt-11 pb-4">
+          <div class="px-4 pt-11 pb-4">
             <button type="button" @click="List = !List"
-              class="w-20 sm:w-32 xl:w-40 h-10 py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+              class="w-20 sm:w-32 xl:w-40 h-10 py-3 px-4 inline-flex items-center gap-x-2 text-base font-medium rounded-lg border border-transparent bg-blue-100 text-blue-800 hover:bg-blue-200 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
               List
             </button>
           </div>
         </div>
       </div>
     </header>
-    <div v-if="isLoading" class="fixed inset-0 flex justify-center items-center bg-gray-50 bg-opacity-50">
+    <div v-if="StartLoading" class="fixed inset-0 flex justify-center items-center bg-gray-50 bg-opacity-50">
       <svg aria-hidden="true" class="w-8 h-8 text-gray-200 animate-spin dark:text-gray-600 fill-blue-600"
         viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
@@ -69,7 +69,7 @@
               </svg>
             </button>
           </div>
-          <div class="fixed top-24 left-4 z-30">
+          <div class="fixed bottom-12 right-4 z-30">
             <button type="button" @click="ScrollToLastElement"
               class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
@@ -126,7 +126,7 @@
               class="bg-gray-200 ml-2 border-2 border-black w-10 text-center" /><button type="button"
               @click="ChangePosition"
               class="w-20 h-6 py-3 ml-1 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
-              Change
+              Send
             </button>
             <button type="button" @click="this.selected = []"
               class="w-32 sm:w-28 h-6 py-3 ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
@@ -134,71 +134,93 @@
             </button>
             <div class="ml-4">Total Number Of Items: {{this.Total}}</div>
           </div>
+          <div v-if="MidLoading" class="text-center py-4">
+            <svg class="animate-spin h-8 w-8 text-blue-500 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8z"></path>
+            </svg>
+            <p class="text-sm font-medium text-gray-600 mt-2">Loading...</p>
+          </div>
+          <div v-if="Last" class="text-lg font-medium text-center justify-center">
+            No More Data to Load......
+          </div>
         </div>
-        <div v-else="" :class="`grid grid-cols-${No_Of_Cards} sm:grid-cols-${No_Of_Cards} xl:grid-cols-${No_Of_Cards}`"
-          ref="CardsContainer">
-          <div class="fixed bottom-4 right-4 z-50">
-            <button type="button" @click="ScrollToFirstElement"
-              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
-                <path
-                  d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
-              </svg>
-            </button>
-          </div>
-          <div class="fixed top-24 left-4 z-30">
-            <button type="button" @click="ScrollToLastElement"
-              class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                <path d="M26.29 20.29 18 28.59V0h-2v28.59l-8.29-8.3-1.42 1.42 10 10a1 1 0 0 0 1.41 0l10-10z"
-                  data-name="2-Arrow Down" />
-              </svg>
-            </button>
-          </div>
-          <div v-for="(p, index) in products.products" :key="index" class="px-2 py-4">
-            <div
-              class="bg-white rounded-xl z-20 border-2 overflow-hidden shadow-lg transform transition hover:translate-y-2 hover:shadow-2xl mt-4 mb-4"
-              :class="{'border-blue-500': selected.includes(index), 'border-white': !selected.includes(index)}"
-              ref="CardsContainer" @mouseenter="startImageRotation(index)" @mouseleave="stopImageRotation"
-              @click="CardSelected(index)">
-              <div class="w-full h-48 overflow-hidden">
-                <img :src="currentImage(index)" alt="" class="object-contain w-full h-full" />
-              </div>
-              <div class="p-4 text-center sm:text-left">
-                <div
-                  class="font-medium text-sm mb-2 truncate group-hover:text-xs group-hover:overflow-visible group-hover:whitespace-normal">
-                  {{ p.title }}
+        <div v-else="">
+          <div :class="`grid grid-cols-${No_Of_Cards} sm:grid-cols-${No_Of_Cards} xl:grid-cols-${No_Of_Cards}`"
+            ref="CardsContainer">
+            <div class="fixed bottom-4 right-4 z-50">
+              <button type="button" @click="ScrollToFirstElement"
+                class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+                  <path
+                    d="m3.293 11.293 1.414 1.414L11 6.414V20h2V6.414l6.293 6.293 1.414-1.414L12 2.586l-8.707 8.707z" />
+                </svg>
+              </button>
+            </div>
+            <div class="fixed bottom-12 right-4 z-30">
+              <button type="button" @click="ScrollToLastElement"
+                class="w-14 h-14 py-3 px-4 inline-flex font-medium rounded-full border-transparent">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                  <path d="M26.29 20.29 18 28.59V0h-2v28.59l-8.29-8.3-1.42 1.42 10 10a1 1 0 0 0 1.41 0l10-10z"
+                    data-name="2-Arrow Down" />
+                </svg>
+              </button>
+            </div>
+            <div v-for="(p, index) in products.products" :key="index" class="px-2 py-4">
+              <div
+                class="bg-white rounded-xl z-20 border-2 overflow-hidden shadow-lg transform transition hover:translate-y-2 hover:shadow-2xl mt-4 mb-4"
+                :class="{'border-blue-500': selected.includes(index), 'border-white': !selected.includes(index)}"
+                ref="CardsContainer" @mouseenter="startImageRotation(index)" @mouseleave="stopImageRotation"
+                @click="CardSelected(index)">
+                <div class="w-full h-48 overflow-hidden">
+                  <img :src="currentImage(index)" alt="" class="object-contain w-full h-full" />
                 </div>
-                <div
-                  class="font-light uppercase text-xs mb-2 truncate group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
-                  {{ p.category }}
-                </div>
-                <div
-                  class="font-medium uppercase text-xs mb-2 truncate group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
-                  {{ p.brand }}
-                </div>
-                <div class="flex items-center gap-2 justify-center sm:justify-start">
-                  <span class="text-sm font-semibold">${{ p.discountPercentage }}</span>
-                  <span class="text-xs line-through">${{ p.price }}</span>
+                <div class="p-4 text-center sm:text-left">
+                  <div
+                    class="font-medium text-sm mb-2 truncate group-hover:text-xs group-hover:overflow-visible group-hover:whitespace-normal">
+                    {{ p.title }}
+                  </div>
+                  <div
+                    class="font-light uppercase text-xs mb-2 truncate group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
+                    {{ p.category }}
+                  </div>
+                  <div
+                    class="font-medium uppercase text-xs mb-2 truncate group-hover:overflow-visible group-hover:whitespace-normal group-hover:text-clip">
+                    {{ p.brand }}
+                  </div>
+                  <div class="flex items-center gap-2 justify-center sm:justify-start">
+                    <span class="text-sm font-semibold">${{ p.discountPercentage }}</span>
+                    <span class="text-xs line-through">${{ p.price }}</span>
+                  </div>
                 </div>
               </div>
             </div>
+            <div v-if="selected.length != 0"
+              class="w-180 bg-gray-200 sm: w-full rounded-xl flex flex-wrap z-40 fixed bottom-0 left-1/2 transform -translate-x-1/2 p-4">
+              Selected cards: {{ selected.length }}
+              <div class="ml-4">To Position:</div>
+              <input type="number" v-model="ToPosition"
+                class="bg-gray-200 ml-2 border-2 border-black w-10 text-center" /><button type="button"
+                @click="ChangePosition"
+                class="w-20 h-6 py-3 ml-1 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+                Send
+              </button>
+              <button type="button" @click="this.selected = []"
+                class="w-32 sm:w-28 h-6 py-3 ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
+                Unselect All
+              </button>
+              <div class="ml-4">Total Number Of Items: {{this.Total}}</div>
+            </div>
           </div>
-          <div v-if="selected.length != 0"
-            class="w-180 bg-gray-200 sm: w-full rounded-xl flex flex-wrap z-40 fixed bottom-0 left-1/2 transform -translate-x-1/2 p-4">
-            Selected cards: {{ selected.length }}
-            <div class="ml-4">To Position:</div>
-            <input type="number" v-model="ToPosition"
-              class="bg-gray-200 ml-2 border-2 border-black w-10 text-center" /><button type="button"
-              @click="ChangePosition"
-              class="w-20 h-6 py-3 ml-1 sm:ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
-              Change
-            </button>
-            <button type="button" @click="this.selected = []"
-              class="w-32 sm:w-28 h-6 py-3 ml-2 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-200 text-blue-800 hover:bg-blue-300 focus:outline-none active:bg-blue-300 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-400 dark:hover:bg-blue-900 dark:focus:bg-blue-900">
-              Unselect All
-            </button>
-            <div class="ml-4">Total Number Of Items: {{this.Total}}</div>
+          <div v-if="MidLoading" class="text-center py-4">
+            <svg class="animate-spin h-8 w-8 text-blue-500 mx-auto" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+              <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+              <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v8z"></path>
+            </svg>
+            <p class="text-sm font-medium text-gray-600 mt-2">Loading...</p>
+          </div>
+          <div v-if="Last" class="text-lg font-medium text-center justify-center">
+            No More Data to Load......
           </div>
         </div>
       </div>
@@ -212,7 +234,7 @@
           products: [],
           currentImageIndex: {},
           rotationInterval: null,
-          isLoading: true,
+          StartLoading: true,
           No_Of_Cards: null,
           List: false,
           skip: 0,
@@ -221,6 +243,8 @@
           selectable: false,
           ToPosition: 0,
           Total: null,
+          Last: false,
+          MidLoading: false,
         };
       },
       beforeMount() {
@@ -234,7 +258,7 @@
       },
       methods: {
         async getData() {
-          this.isLoading = true;
+          this.StartLoading = true;
           try {
             const response = await fetch("https://dummyjson.com/products");
             const products = await response.json();
@@ -243,9 +267,8 @@
           } catch (error) {
             console.error("Error fetching data:", error);
           } finally {
-            this.isLoading = false;
+            this.StartLoading = false;
           }
-          this.selectable = true;
         },
         async getNextProducts() {
           window.addEventListener("scroll", async () => {
@@ -259,6 +282,9 @@
         },
         async GetProducts() {
           this.skip += 30;
+          if(this.products.products.length!= this.Total){
+            this.MidLoading = true;
+          }
           const response = await fetch(
             `https://dummyjson.com/products?skip=${this.skip}`
           );
@@ -269,8 +295,11 @@
               ...data.products,
             ];
           }
-          if (this.products.products.length === data.total) {
+          this.MidLoading = false;
+          if (this.products.products.length === this.Total) {
+            this.MidLoading = false;
             this.selectable = true;
+            this.Last = true;
           }
         },
         currentImage(index) {
