--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </svg>
             <p class="text-sm font-medium text-gray-600 mt-2">Loading...</p>
           </div>
-          <div v-if="Last" class="text-lg font-medium text-center justify-center">
+          <div v-if="Last" class="text-lg font-medium text-center justify-center italic">
             No More Data to Load......
           </div>
         </div>
@@ -220,7 +220,7 @@
             </svg>
             <p class="text-sm font-medium text-gray-600 mt-2">Loading...</p>
           </div>
-          <div v-if="Last" class="text-lg font-medium text-center justify-center">
+          <div v-if="Last" class="text-lg font-medium text-center justify-center italic">
             No More Data to Load......
           </div>
         </div>
